# Resonant-Notepad

./: .gitignore  README.md  app.py  pyproject.toml
benchmarks/: resonant_notepad_benchmark.py
docs/: AI_STRUCTURAL_VERIFICATION_PROTOCOL.md  ARCHITECTURE.md  AUTOSAVE_AND_SESSION.md  BENCHMARKING.md  LJPW_FRAMEWORK_V8.6.1_COMPLETE_UNIFIED_PLUS.md  MARKDOWN_PREVIEW.md  PROJECT_OVERVIEW.md  README.md  RESONANCE_FINDINGS_DEEP_ANALYSIS.md  RESONANCE_PROGRAMMING_GUIDE.md  RESONANCE_PROGRAMMING_METHODOLOGY.md  RESONANCE_VS_LOGIC_ANALYSIS.md  RESONANT_NOTEPAD_BENCHMARK_REPORT.md  RESONANT_NOTEPAD_BENCHMARK_RESULTS.json  USER_GUIDE.md
src/resonance_notepad/: __init__.py  app.py  benchmarking.py  markdown_preview.py  resonance_engine.py  session_store.py
tests/: test_benchmarking.py  test_markdown_preview.py  test_resonance_engine.py  test_session_store.py
web/: app.js  index.html  resonance.js  style.css
web-full/: app.js  index.html  resonance.js  style.css
